--- a/en/meta.yml
+++ b/en/meta.yml
@@ -5,7 +5,7 @@ description: Access the Weather Station database and fetch the weather
 original_url: https://raspberrypi.org/learning/fetching-the-weather
 theme: red
 duration: 2
-listed: false
+listed: true
 ingredient: false
 copyedit: true
 curriculum: creator, design-0, programming-0, phys-comp-0, manufacture-0, community-0
