--- a/en/meta.yml
+++ b/en/meta.yml
@@ -19,14 +19,16 @@ last_tested: 2017-01-01
 steps:
 - title: Introduction
 - title: What you will need
-  completion: engaged
 - title: Fetching the Weather
 - title: Finding a Weather Station
+  completion:
+  - engaged
 - title: Fetching the latest weather
 - title: Longitude and latitude
 - title: Finding the distance between two points on the Earth
 - title: Fetch your local weather
 - title: Finding the closest station
-  completion: internal
 - title: Getting the weather data
+  completion:
+  - internal
 - title: What next?
